--- a/src/App.css
+++ b/src/App.css
@@ -48,3 +48,8 @@ dotlottie-wc.hero-animation {
 .react-tooltip {
   z-index: 100 !important;
 }
+
+.draggable-container {
+  touch-action: none;
+  user-select: none;
+}
